; ModuleID = '/home/carl/AnghaBench/SoftEtherVPN/src/Mayaqua/extr_Kernel.c_NormalizeTm.c'
source_filename = "/home/carl/AnghaBench/SoftEtherVPN/src/Mayaqua/extr_Kernel.c_NormalizeTm.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.tm = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @NormalizeTm(%struct.tm* %0) #0 {
  %2 = alloca %struct.tm*, align 8
  %3 = alloca i64, align 8
  store %struct.tm* %0, %struct.tm** %2, align 8
  %4 = load %struct.tm*, %struct.tm** %2, align 8
  %5 = icmp eq %struct.tm* %4, null
  br i1 %5, label %6, label %7

6:                                                ; preds = %1
  br label %16

7:                                                ; preds = %1
  %8 = load %struct.tm*, %struct.tm** %2, align 8
  %9 = call i64 @c_mkgmtime(%struct.tm* %8)
  store i64 %9, i64* %3, align 8
  %10 = load i64, i64* %3, align 8
  %11 = icmp eq i64 %10, -1
  br i1 %11, label %12, label %13

12:                                               ; preds = %7
  br label %16

13:                                               ; preds = %7
  %14 = load %struct.tm*, %struct.tm** %2, align 8
  %15 = call i32 @c_gmtime_r(i64* %3, %struct.tm* %14)
  br label %16

16:                                               ; preds = %13, %12, %6
  ret void
}

declare dso_local i64 @c_mkgmtime(%struct.tm*) #1

declare dso_local i32 @c_gmtime_r(i64*, %struct.tm*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
